# libstorage

./: .gitignore  .travis.yml  Cargo.toml  Contributing.md  NOTICE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: rust.yml
point-derive/: Cargo.toml
point-derive/src/: lib.rs
src/: brocade.rs  error.rs  hitachi.rs  isilon.rs  lib.rs  netapp.rs  openstack.rs  scaleio.rs  solidfire.rs  telegraf.rs  vmax.rs  vnx.rs  xtremio.rs
src/ir/: mod.rs
tests/brocade/: fcfabrics.json  fcports.json  fcports_all.json  fcswitches.json  fcswitches_all.json  resource_groups.json  zone-aliases.json  zones.json
tests/hitachi/: config_manager.json  nas_pd_hfsc.csv  nas_pd_hnc.csv  nas_pd_hplc.csv  nas_pd_hsmu.csv  nas_pi_hnhs.csv  nas_pi_hns.csv  pool.json  raid_pd_plc.csv  raid_pd_plts.csv  raid_pi.csv  raid_pi_chs.csv  raid_pi_lda.csv  raid_pi_lds.csv  raid_pi_prcs.csv  raid_pi_pts.csv  storage_ldev.json  volume.json
tests/isilon/: cluster_statfs.json  node_status.json
tests/netapp/: failed.xml  ha_interconnect_perf_stats.xml  version.xml  volume_list.xml
tests/openstack/: servers.json  user.json  volumes.json
tests/scaleio/: clusterSelectedStatisticsResponse.json  device_statistics.json  device_statistics_v3.json  instances.json  instances_v3.json  poolInstance.json  querySelectedStatistics.json  sdcSelectedStatisticsResponse.json  sdc_info.json  sdc_v3_info.json  sdsObject.json  sds_statistics.json  sds_statistics_v3.json  system.json  system_config.json  system_statistics.json  system_statistics_v3.json  system_v3.json  systems.json
tests/solidfire/: get_cluster_capacity.json  get_cluster_full_threshold.json  get_cluster_info.json  get_cluster_stats.json  get_drive_config.json  get_volume_stats.json  list_active_nodes.json  list_drive_hardware.json  list_volumes.json
tests/telegraf/: telegraf.txt
tests/vmax/: OLD_per_array_fed_metrics.json  per_array_fed.json  per_array_fed_metrics.json  per_array_portgroup.json  per_array_portgroup_metrics.json  per_array_storagegroup.json  per_array_storagegroup_metrics.json  per_array_storagegroup_metrics2.json  slo_array.json  slo_array_srp.json  slo_array_srps.json  slo_array_stoagegroups.json  slo_array_storagegroup.json  slo_arrays.json  slo_provisioning_system_properties.json  slo_volume.json  slo_volumes.json
tests/vnx/: cifs_server_query.xml  cifs_stats_query.xml  clariion_disk_query.xml  filesystem_capacity_query.xml  filesystem_usage_query.xml  mounts_query.xml  mover_stats_query.xml  network_stats_query.xml  nfs_mounted_shares.xml  nfs_mover_request.xml  storage_pool2_query.xml  storage_pool_query.xml  vnxexportnfs  volume_query.xml
tests/xtremio/: clusters.json  psus.json  ssds.json  volumes.json  xmss.json
xml-attributes-derive/: Cargo.toml
xml-attributes-derive/src/: lib.rs
