[package]
name = "libstorage"
version = "0.4.8"
authors = ["Chris Holcombe <christopher_holcombe@comcast.com>", "Sravanthi Dandamudi <sravanthi_dandamudi@comcast.com>", "Rob Powers <comcastrp@gmail.com>"]
description = "Storage helper functions"
documentation = "https://github.com/Comcast/libstorage"
edition = '2018'
homepage = "https://github.com/Comcast/libstorage"
license = "Apache-2.0"
readme = "README.md"
keywords = ["storage", "netapp", "emc"]

[workspace]
members = [
	"point-derive", "xml-attributes-derive"
]

[dependencies]
csv = "~1.1"
cookie = "~0.15"
chrono = "~0.4"
futures = "~0.3"
hyper = "~0.14"
influx_db_client = "~0.5"
isilon = {version="~5.0", optional=true}
log = "~0.4"
native-tls = "~0.2"
nom = "~3.2"
#point-derive = "~0.1"
point-derive = "~0.1"
postgres = "~0.19"
rayon = "~1.5"
reqwest = "~0.9"
serde = "~1.0"
serde_derive = "~1.0"
serde_json = "~1.0"
serde_repr = "~0.1"
tokio-core = "~0.1"
treexml = "~0.6"
uname = "~0.1"
uuid = { version = "~0.8", features = ["serde"] }
quick-xml = "~0.22"
xml-attributes-derive = "0.1"
xml-rs = "~0.8"
simplelog = "~0.10"

[features]
default = []
isilon-library = ["isilon"]
