[package]
name = "point-derive"
version = "0.1.0"
authors = ["Chris Holcombe <christopher_holcombe@comcast.com>"]
description = "Proc macro to help with struct to ts point conversion" 
license = "Apache-2.0"
documentation = "https://github.com/Comcast/libstorage"
homepage = "https://github.com/Comcast/libstorage"
edition = '2018'

[dependencies]
syn = "0.11.11"
quote = "0.3.15"
lazy_static = "~1.3"

[lib]
proc-macro = true
