[package]
name = "point-derive"
version = "0.1.4"
authors = ["Chris Holcombe <christopher_holcombe@comcast.com>"]
description = "Proc macro to help with struct to ts point conversion" 
license = "Apache-2.0"
documentation = "https://github.com/Comcast/libstorage"
homepage = "https://github.com/Comcast/libstorage"
edition = '2018'

[dependencies]
proc-macro2 = "0.4"
quote = "~0.6"
syn = "~0.15"

[lib]
proc-macro = true
